--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -41,10 +41,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     
-   @*  <!-- Font Awesome -->
-    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
-    <!-- Ionicons -->
+     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
     <!-- Tempusdominus Bootstrap 4 -->
     <link rel="stylesheet" href="~/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
     <!-- iCheck -->
@@ -58,7 +58,7 @@
     <!-- Daterange picker -->
     <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
-    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css"> *@
+    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css"> 
     
     <link href="~/Argon/css/css-nucleo-icons.css" rel="stylesheet">
     <link href="~/Argon/css/css-nucleo-svg.css" rel="stylesheet">
@@ -148,7 +148,7 @@
             <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
                aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" href="dashboard.html" target="_blank">
-                <img src="images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
+                <img src="~/Argon/images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
                 <span class="ms-1 font-weight-bold">VidhayakApp</span>
             </a>
         </div>
