--- a/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="76x76" href="~/Argon/favicons/img-apple-icon.png">
-    <link rel="icon" type="image/png" href="favicons/~/Argon/favicons/img-favicon.png">
+    <link rel="icon" type="image/png" href="~/Argon/favicons/img-favicon.png">
     <title>
         Vidhayak App
     </title>
@@ -42,7 +42,7 @@
  
     
      <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  @*  <!-- Font Awesome -->
+   @* <!-- Font Awesome -->
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -68,7 +68,7 @@
     <!-- Daterange picker -->
     <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
-    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css"> *@
+    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">  *@
 
 
 
@@ -157,7 +157,7 @@
             <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
                aria-hidden="true" id="iconSidenav"></i>
             <a class="navbar-brand m-0" href="dashboard.html" target="_blank">
-                <img src="images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
+                <img src="~/Argon/images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
                 <span class="ms-1 font-weight-bold">VidhayakApp</span>
             </a>
         </div>
