--- a/VidhayakApp.Web/wwwroot/css/UserDashboardTable.css
+++ b/VidhayakApp.Web/wwwroot/css/UserDashboardTable.css
@@ -28,7 +28,7 @@ body {
 main.table {
     width: 82vw;
     height: 90vh;
-    background-color: #fff5;
+    background-color: white;
     backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005;
     border-radius: .8rem;
