--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="76x76" href="~/Argon/favicons/img-apple-icon.png">
     <link rel="icon" type="image/png" href="favicons/~/Argon/favicons/img-favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>
         Vidhayak App
     </title>
@@ -41,7 +43,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     
-     <!-- Font Awesome -->
+    @*  <!-- Font Awesome -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
@@ -58,7 +60,7 @@
     <!-- Daterange picker -->
     <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
-    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css"> 
+    <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.min.css">  *@
     
     <link href="~/Argon/css/css-nucleo-icons.css" rel="stylesheet">
     <link href="~/Argon/css/css-nucleo-svg.css" rel="stylesheet">
@@ -257,6 +259,15 @@
                         </div> *@
                     </div>
                     <ul class="navbar-nav  justify-content-end">
+                       @*  <div class="form-check form-switch ps-0 ms-auto my-auto">
+                            <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
+                        </div> *@
+                        <li class="nav-item d-flex align-items-center form-check form-switch ps-0 ms-auto my-auto">
+                            <i class="fa-solid fa-moon fa-lg" style="color: #FFD43B;margin-top: 5px;"></i>&nbsp;
+                            <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
+                        </li>
+                        &nbsp;  &nbsp;  &nbsp;  &nbsp;
+
                         <li class="nav-item d-flex align-items-center">
                             <a asp-action="Logout" asp-controller="Account" class="nav-link text-white font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
@@ -772,12 +783,10 @@
                     </div>
                 </div>
                 <hr class="horizontal dark my-sm-4">
-                <div class="mt-2 mb-5 d-flex">
+               @*  <div class="mt-2 mb-5 d-flex">
                     <h6 class="mb-0">Light / Dark</h6>
-                    <div class="form-check form-switch ps-0 ms-auto my-auto">
-                        <input class="form-check-input mt-1 ms-auto" type="checkbox" id="dark-version" onclick="darkMode(this)">
-                    </div>
-                </div>
+                   
+                </div> *@
                 </div>
             </div>
         </div>
