--- a/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AppUserLayout.cshtml
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="~/Argon/favicons/img-apple-icon.png">
     <link rel="icon" type="image/png" href="favicons/~/Argon/favicons/img-favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+    <link rel="stylesheet" href="~/css/try.css">
     <title>
         Vidhayak App
     </title>
