--- a/VidhayakApp.Web/Views/Admin/Departments.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Departments.cshtml
@@ -3,7 +3,7 @@
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Departments";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
@@ -33,7 +33,7 @@
 <body class="body_img_user_table">
     <main class="table" id="customers_table">
         <section class="table__header">
-            <h3>User @ViewData["Title"]</h3>
+            <h3>@ViewData["Title"]</h3>
             <div class="input-group">
                 <input type="search" placeholder="Search Data...">
                 @*  <img src="~/dist/img/search.png" alt=""> *@
