--- a/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Complaint.cshtml
@@ -32,7 +32,7 @@
 <body class="body_img_user_table">
     <main class="table" id="customers_table">
         <section class="table__header">
-            <h3>User @ViewData["Title"]</h3>
+            <h3>@ViewData["Title"]</h3>
             <div class="input-group">
                 <input type="search" placeholder="Search Data...">
                 @*  <img src="~/dist/img/search.png" alt=""> *@
