--- a/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Dashboard.cshtml
@@ -45,6 +45,7 @@
 <body>
         <link rel="stylesheet" href="~/css/site.css" />
 <section>
+            <h1> @ViewData["Title"]</h1>
      <div class="container-fluid col-12 " style="margin-top: 8rem">
 
             
