--- a/VidhayakApp.Web/Views/AppUser/Profile.cshtml
+++ b/VidhayakApp.Web/Views/AppUser/Profile.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Profile";
     Layout = "~/Views/Shared/_AppUserLayout.cshtml";
     var context = HttpContextAccessor.HttpContext;
     // Use httpContext as needed
