--- a/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_UserLayout.cshtml
@@ -241,15 +241,14 @@
     </aside>
     <main class="main-content position-relative border-radius-lg ">
 
-        <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl " id="navbarBlur"
-             data-scroll="false">
+        <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl position-sticky bg-white left-auto top-2 z-index-sticky" id="navbarBlur" data-scroll="true">
             <div class="container-fluid py-1 px-3">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
-                        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-white" href="javascript:;.html">Pages</a></li>
-                        <li class="breadcrumb-item text-sm text-white active" aria-current="page">Dashboard</li>
+                        <li class="breadcrumb-item text-sm"><a class="opacity-5 text-black" href="javascript:;.html"></a></li>
+                        <li class="breadcrumb-item text-sm text-black active" aria-current="page">@ViewData["Title"]</li>
                     </ol>
-                    <h6 class="font-weight-bolder text-white mb-0">Dashboard</h6>
+                    @* <h6 class="font-weight-bolder text-white mb-0">Dashboard</h6> *@
                 </nav>
                 <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
                     <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -269,7 +268,7 @@
                         &nbsp;  &nbsp;  &nbsp;  &nbsp;
 
                         <li class="nav-item d-flex align-items-center">
-                            <a asp-action="Logout" asp-controller="Account" class="nav-link text-white font-weight-bold px-0">
+                            <a asp-action="Logout" asp-controller="Account" class="nav-link text-black font-weight-bold px-0">
                                 <i class="fa fa-user me-sm-1"></i>
                                 <span class="d-sm-inline d-none">Logout</span>
                             </a>
