--- a/VidhayakApp.Web/Views/User/Complaint.cshtml
+++ b/VidhayakApp.Web/Views/User/Complaint.cshtml
@@ -24,7 +24,7 @@
                 <div class="col-sm-10">
                     <div class="card card-danger">
                         <div class="card-header">
-                            Complaint Form
+                                @ViewData["Title"] Form
                         </div>
 
                         <div class="card-body">
