--- a/VidhayakApp.Web/Views/User/Demand.cshtml
+++ b/VidhayakApp.Web/Views/User/Demand.cshtml
@@ -26,7 +26,7 @@
 
                 <div class="card card-danger">
                     <div class="card-header">
-                        Demand Form
+                               @ViewData["Title"] Form
                     </div>
 
                     <div class="card-body">
