--- a/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+@{
+    var context = HttpContextAccessor.HttpContext;
+    var roleId = context.Session.GetInt32("RoleId");
+}
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -150,7 +157,8 @@
         <div class="sidenav-header">
             <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
                aria-hidden="true" id="iconSidenav"></i>
-            <a class="navbar-brand m-0" href="dashboard.html" target="_blank">
+           @*  <a class="navbar-brand m-0" asp-action="Dashboard" asp-controller="Admin" target="_blank"> *@ 
+               <a class="navbar-brand m-0" asp-action="Dashboard" asp-controller="Admin">
                 <img src="~/Argon/images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
                 <span class="ms-1 font-weight-bold">VidhayakApp</span>
             </a>
@@ -230,14 +238,14 @@
                         <span class="nav-link-text ms-1">Create AppUser</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                @* <li class="nav-item">
                     <a class="nav-link" asp-action="Report" asp-controller="Admin">
                         <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
                         </div>
                         <span class="nav-link-text ms-1">Report</span>
                     </a>
-                </li>
+                </li> *@
 
                 @* <li class="nav-item mt-3">
                 <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
