01-04-2024 17:30pm more UI changes

--- a/VidhayakApp.Web/Views/Account/Register.cshtml
+++ b/VidhayakApp.Web/Views/Account/Register.cshtml
@@ -394,9 +394,9 @@
         </div>
     </main>
 
-    <footer class="footer py-5">
+     <footer class="footer py-5">
         <div class="container">
-            <div class="row">
+           @*  <div class="row">
                 <div class="col-lg-8 mb-4 mx-auto text-center">
                     <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
                         Company
@@ -434,13 +434,13 @@
                         <span class="text-lg fab fa-github"></span>
                     </a>
                 </div>
-            </div>
+            </div>  *@
             <div class="row">
                 <div class="col-8 mx-auto text-center mt-1">
                     <p class="mb-0 text-secondary">
                         Copyright &copy; <script>
                                              document.write(new Date().getFullYear())
-                        </script> Soft by Creative Tim.
+                        </script> Soft by Cognic
                     </p>
                 </div>
             </div>
