--- a/VidhayakApp.Web/Views/Admin/Create.cshtml
+++ b/VidhayakApp.Web/Views/Admin/Create.cshtml
@@ -52,7 +52,7 @@
                 </div>
                             <div class="col-md-6">
                                 <label >Select Ward:</label>
-                                <select asp-for="WardId" name="WardId" id="Ward">
+                                    <select asp-for="WardId" name="WardId" id="Ward" class="ward-width">
                                     <option value="">Select a Ward</option>
                                     <option value="1">Garha Ward - Ward No.1 </option>
                                     <option value="2">Verendrapur ward- Ward No.2 </option>
