--- a/VidhayakApp.Web/Views/Home/Index.cshtml
+++ b/VidhayakApp.Web/Views/Home/Index.cshtml
@@ -13,26 +13,13 @@
     <link rel="stylesheet" href="~/css/homeIndex.css">
 </head>
 <body>
-    <header>
-        <Ah1>Welcome to Your VidhayakApp</h1>
-    </header>
-    <main>
-        <div class="banner-container">
-            <img src="~/dist/img/banner1.jpg" alt="Banner Image 1" >
-        
-            @* <img src="~/dist/img/OIG3.jpg" alt="Banner Image 2">
-            <img src="~/dist/img/OIG3.V0BW.R9jw9ho.jpg" alt="Banner Image 3"> *@
-        </div>
-        <div class="banner-container">
-     
-            <img src="~/dist/img/banner2.jpg" alt="Banner Image 1">
-            @* <img src="~/dist/img/OIG3.jpg" alt="Banner Image 2">
-            <img src="~/dist/img/OIG3.V0BW.R9jw9ho.jpg" alt="Banner Image 3"> *@
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Your Website. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
+    <video autoplay muted loop style="position: fixed; top: 0; left: 0; width: fit-content; height: fit-content; z-index: -1; resize:block">
+            <source src="~/dist/video/Banner.webm" type="video/webm">
+            <!-- Add additional source tags for other video formats if needed -->
+            Your browser does not support the video tag.
+        </video>
+
+
+ 
 </body>
 </html>
