--- a/VidhayakApp.Web/Views/Account/Login.cshtml
+++ b/VidhayakApp.Web/Views/Account/Login.cshtml
@@ -263,9 +263,9 @@
         </div>
     </main>
 
-    <footer class="footer py-5">
+     <footer class="footer py-5">
         <div class="container">
-            <div class="row">
+        @*   <div class="row">
                 <div class="col-lg-8 mb-4 mx-auto text-center">
                     <a href="javascript:;.html" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
                         Company
@@ -304,12 +304,12 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
+     *@        <div class="row">
                 <div class="col-8 mx-auto text-center mt-1">
                     <p class="mb-0 text-secondary">
                         Copyright &copy; <script>
                                              document.write(new Date().getFullYear())
-                        </script> Soft by Creative Tim.
+                        </script> Soft by Cognic.
                     </p>
                 </div>
             </div>
