--- a/VidhayakApp.Web/Views/Shared/_Layout.cshtml
+++ b/VidhayakApp.Web/Views/Shared/_Layout.cshtml
@@ -143,24 +143,16 @@
                 style="display:none;visibility:hidden"></iframe>
     </noscript>
 
-    <div class="min-height-300 bg-primary position-absolute w-100"></div>
-     <aside class="sidenav bg-white navbar navbar-vertical navbar-xs border-0 border-radius-xl my-3 fixed-start ms-4 "
-           id="sidenav-main" style="position:absolute; width:15%">
-        <div class="sidenav-header">
-            <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
-               aria-hidden="true" id="iconSidenav"></i>
-           @*  <a class="navbar-brand m-0" asp-action="Index" asp-controller="Home" target="_blank"> *@ 
-                <a class="navbar-brand m-0" asp-action="Index" asp-controller="Home">
-                <img src="~/Argon/images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-                <span class="ms-1 font-weight-bold">VidhayakApp</span>
-            </a>
-        </div>
+    <div class=" bg-primary position-absolute w-100"></div>
+    @* <aside class="sidenav bg-white navbar navbar-vertical navbar-xs border-0 border-radius-xl my-3 fixed-start ms-4  top-1"
+           id="sidenav-main" style="position:absolute; width: 21%; height: 20%;">
+       
        
               
                 <div class="sidenav-footer mx-3 ">
                 <div class="card card-plain shadow-none" id="sidenavCard">
                 @* <img class="w-50 mx-auto" src="~/Argon/images/illustrations-icon-documentation.svg" alt="sidebar_illustration">
- *@                <div class="card-body text-center p-3 w-100 pt-0">
+ *@             @*    <div class="card-body text-center p-3 w-100 pt-0">
                 <div class="docs-info">
                
                
@@ -169,10 +161,19 @@
                 </div>
                 </div>
                 
-    </aside>
-   <main class="main-content position-relative border-radius-lg ">
+    </aside>  *@
+    <main class="main-content position-relative border-radius-lg" style="margin-top: -20px;">
 
-        <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl position-sticky bg-white left-auto top-2 z-index-sticky" id="navbarBlur" data-scroll="true">
+        <nav class="navbar navbar-main navbar-expand-lg px-0  shadow-none border-radius-xl position-sticky bg-white left-auto z-index-sticky" id="navbarBlur" data-scroll="true">
+            <div class="sidenav-header">
+                <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+                   aria-hidden="true" id="iconSidenav"></i>
+                @*  <a class="navbar-brand m-0" asp-action="Index" asp-controller="Home" target="_blank"> *@
+                <a class="navbar-brand m-0" asp-action="Index" asp-controller="Home">
+                    <img src="~/Argon/images/img-logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
+                    <span class="ms-1 font-weight-bold">VidhayakApp</span>
+                </a>
+            </div>
             <div class="container-fluid py-1 px-3 lm">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -233,14 +234,14 @@
         </nav>
 
 
-        <div class="container-fluid py-4">
+        <div class="py-4">
             <div class="row">
                 @RenderBody()
               
             </div>
         </div>
 
-        <footer class="footer pt-3" style="position:fixed;bottom:0;width:70%;">
+        <footer class="footer pt-3" style="position:fixed;bottom:0;width:100%;">
             <div class="container-fluid">
                 <div class="row align-items-center justify-content-lg-between">
                     <div class="col-lg-6 mb-lg-0 mb-4">
@@ -250,8 +251,8 @@
                                 document.write(new Date().getFullYear())
                             </script>,
                             made with <i class="fa fa-heart"></i> by
-                            <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
-                            for a better web.
+                            <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Cognic</a>
+                          
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -277,75 +278,9 @@
                 </div>
             </div>
         </footer>
-        </div>
+       
     </main>
-    <div class="fixed-plugin">
-        @* <a class="fixed-plugin-button text-dark position-fixed px-3 py-2" href="pages.html">
-        <i class="fa fa-cog py-2"> </i>
-        </a> *@
-        <div class="card shadow-lg">
-            <div class="card-header pb-0 pt-3 ">
-                <div class="float-start">
-                    <h5 class="mt-3 mb-0">VidhayakApp Configurator</h5>
-                    <p>See our dashboard options.</p>
-                </div>
-                <div class="float-end mt-4">
-                    <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
-                        <i class="fa fa-close"></i>
-                    </button>
-                </div>
-
-            </div>
-            <hr class="horizontal dark my-1">
-            <div class="card-body pt-sm-3 pt-0 overflow-auto">
-
-                <div>
-                    <h6 class="mb-0">Sidebar Colors</h6>
-                </div>
-                <a href="javascript:void(0)" class="switch-trigger background-color">
-                    <div class="badge-colors my-2 text-start">
-                        <span class="badge filter bg-gradient-primary active" data-color="primary"
-                              onclick="sidebarColor(this)"></span>
-                        <span class="badge filter bg-gradient-dark" data-color="dark" onclick="sidebarColor(this)"></span>
-                        <span class="badge filter bg-gradient-info" data-color="info" onclick="sidebarColor(this)"></span>
-                        <span class="badge filter bg-gradient-success" data-color="success" onclick="sidebarColor(this)"></span>
-                        <span class="badge filter bg-gradient-warning" data-color="warning" onclick="sidebarColor(this)"></span>
-                        <span class="badge filter bg-gradient-danger" data-color="danger" onclick="sidebarColor(this)"></span>
-                    </div>
-                </a>
-
-                <div class="mt-3">
-                    <h6 class="mb-0">Sidenav Type</h6>
-                    <p class="text-sm">Choose between 2 different sidenav types.</p>
-                </div>
-                <div class="d-flex">
-                    <button class="btn bg-gradient-primary w-100 px-3 mb-2 active me-2" data-class="bg-white"
-                            onclick="sidebarType(this)">
-                        White
-                    </button>
-                    <button class="btn bg-gradient-primary w-100 px-3 mb-2" data-class="bg-default"
-                            onclick="sidebarType(this)">
-                        Dark
-                    </button>
-                </div>
-                <p class="text-sm d-xl-none d-block mt-2">You can change the sidenav type just on desktop view.</p>
-
-                <div class="d-flex my-3">
-                    <h6 class="mb-0">Navbar Fixed</h6>
-                    <div class="form-check form-switch ps-0 ms-auto my-auto">
-                        <input class="form-check-input mt-1 ms-auto" type="checkbox" id="navbarFixed" onclick="navbarFixed(this)">
-                    </div>
-                </div>
-                <hr class="horizontal dark my-sm-4">
-                @*  <div class="mt-2 mb-5 d-flex">
-                <h6 class="mb-0">Light / Dark</h6>
-
-                </div> *@
-            </div>
-        </div>
-    </div>
-    </div>
-
+    
     <script src="~/Argon/js/core-popper.min.js"></script>
     <script src="~/Argon/js/core-bootstrap.min.js"></script>
     <script src="~/Argon/js/plugins-perfect-scrollbar.min.js"></script>
