--- a/VidhayakApp.Web/wwwroot/css/homeIndex.css
+++ b/VidhayakApp.Web/wwwroot/css/homeIndex.css
@@ -1,44 +1,24 @@
-﻿body {
-    font-family: Arial, sans-serif;
+﻿
+
+
+
+body, html {
     margin: 0;
     padding: 0;
-    /*background-color: #333;*/
+    height: 100%;
+    overflow: hidden;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 40px;
-    text-align: center;
+video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
 }
 
-main {
+.content {
+    /* Add padding or margins to prevent content from overlapping video */
     padding: 20px;
-}
-
-.banner-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px; /* Add some spacing between header and banners */
-}
-
-    .banner-container img {
-        width: 100%;
-        max-width: 1500px; /* Reduce max-width to ensure proper scaling on smaller screens */
-        height: 800px; /* Maintain aspect ratio */
-        border-radius: 10px; /* Add border radius for a smoother look */
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow for depth */
-        transition: transform 0.3s ease; /* Add transition for hover effect */
-    }
-
-        .banner-container img:hover {
-            transform: scale(1.05); /* Scale up slightly on hover for an interactive effect */
-        }
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
 }
